--- a/app/src/main/res/layout/custom_edit_text.xml
+++ b/app/src/main/res/layout/custom_edit_text.xml
@@ -10,8 +10,7 @@
             android:id="@+id/label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/text_gray"
-            android:textSize="@dimen/text_size_18"
+            style="@style/TextLabel"
             tools:text="Texto qualquer" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -33,6 +32,7 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/text_gray"
                 android:textColorHint="@color/gray_3"
+                android:textSize="@dimen/text_size_14"
                 android:textStyle="bold"
                 tools:hint="Texto qualquer" />
 
