--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,7 +24,7 @@
 
     <dimen name="text_size_12">12sp</dimen>
     <dimen name="text_size_14">14sp</dimen>
-    <dimen name="text_size_18">18sp</dimen>
+    <dimen name="text_size_16">16sp</dimen>
     <dimen name="text_size_medium">16sp</dimen>
     <dimen name="text_size_large">20sp</dimen>
     <dimen name="text_size_xlarge">34sp</dimen>
@@ -47,5 +47,7 @@
     <dimen name="width_156">156dp</dimen>
 
     <dimen name="corner_radius_50">50dp</dimen>
+
+    <dimen name="button_height">52dp</dimen>
 
 </resources>
