implemented databinding in new layout

--- a/app/src/main/res/layout/fragment_user_form_new.xml
+++ b/app/src/main/res/layout/fragment_user_form_new.xml
@@ -56,7 +56,8 @@
                     android:label="@string/user_form_user_name_label"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_title" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_title"
+                    app:textValue="@={viewModel.userCompleteName}" />
 
                 <app.igormatos.botaprarodar.common.components.CustomEditText
                     android:id="@+id/cet_user_document"
@@ -65,11 +66,12 @@
                     android:layout_marginHorizontal="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_large"
                     android:hint="@string/user_form_user_document_number_hint"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     android:label="@string/user_form_user_document_number_label"
                     app:layout_constraintEnd_toStartOf="@+id/cet_user_phone"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cet_user_name" />
+                    app:layout_constraintTop_toBottomOf="@+id/cet_user_name"
+                    app:textValue="@={viewModel.userDocument}" />
 
                 <app.igormatos.botaprarodar.common.components.CustomEditText
                     android:id="@+id/cet_user_phone"
@@ -77,12 +79,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:hint="@string/user_form_user_phone_hint"
-                    android:inputType="textPersonName"
+                    android:inputType="phone"
                     android:label="@string/user_form_user_phone_label"
                     app:layout_constraintBottom_toBottomOf="@+id/cet_user_document"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/cet_user_document"
-                    app:layout_constraintTop_toTopOf="@+id/cet_user_document" />
+                    app:layout_constraintTop_toTopOf="@+id/cet_user_document"
+                    app:textValue="@={viewModel.userTelephone}" />
 
                 <TextView
                     android:id="@+id/tv_document_label"
@@ -104,6 +107,7 @@
                     android:layout_marginTop="@dimen/margin_small"
                     android:src="@drawable/ic_baseline_add_a_photo"
                     android:text="@string/user_form_user_document_picture_front_label"
+                    app:imagePathOrUrl="@{viewModel.userImageDocumentFront}"
                     app:layout_constraintEnd_toStartOf="@+id/cpp_document_back_picture"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_document_label" />
@@ -115,22 +119,25 @@
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:src="@drawable/ic_baseline_add_a_photo"
                     android:text="@string/user_form_user_document_picture_back_label"
+                    app:imagePathOrUrl="@{viewModel.userImageDocumentBack}"
                     app:layout_constraintBottom_toBottomOf="@id/cpp_document_front_picture"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/cpp_document_front_picture"
                     app:layout_constraintTop_toTopOf="@id/cpp_document_front_picture" />
 
-                <app.igormatos.botaprarodar.common.components.CustomSelectText
-                    android:id="@+id/cst_user_age"
+                <app.igormatos.botaprarodar.common.components.CustomEditText
+                    android:id="@+id/cet_user_age"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_large"
                     android:hint="@string/default_custom_component_select_hint"
+                    android:inputType="number"
                     android:label="@string/user_form_user_age_label"
                     app:layout_constraintEnd_toStartOf="@+id/cst_user_income"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cpp_document_back_picture" />
+                    app:layout_constraintTop_toBottomOf="@+id/cpp_document_back_picture"
+                    app:textValue="@{viewModel.userAge}" />
 
                 <app.igormatos.botaprarodar.common.components.CustomSelectText
                     android:id="@+id/cst_user_income"
@@ -139,10 +146,11 @@
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:hint="@string/default_custom_component_select_hint"
                     android:label="@string/user_form_user_income_label"
-                    app:layout_constraintBottom_toBottomOf="@+id/cst_user_age"
+                    app:layout_constraintBottom_toBottomOf="@+id/cet_user_age"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/cst_user_age"
-                    app:layout_constraintTop_toTopOf="@+id/cst_user_age" />
+                    app:layout_constraintStart_toEndOf="@+id/cet_user_age"
+                    app:layout_constraintTop_toTopOf="@+id/cet_user_age"
+                    app:textValue="@{viewModel.userIncome}" />
 
                 <app.igormatos.botaprarodar.common.components.CustomSelectText
                     android:id="@+id/cst_user_gender"
@@ -154,10 +162,11 @@
                     android:label="@string/user_form_user_gender_label"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cst_user_income" />
+                    app:layout_constraintTop_toBottomOf="@+id/cst_user_income"
+                    app:textValue="@{viewModel.userGender}" />
 
                 <app.igormatos.botaprarodar.common.components.CustomSelectText
-                    android:id="@+id/cst_user_race"
+                    android:id="@+id/cst_user_racial"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/margin_medium"
@@ -166,7 +175,8 @@
                     android:label="@string/user_form_user_race_label"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cst_user_gender" />
+                    app:layout_constraintTop_toBottomOf="@+id/cst_user_gender"
+                    app:textValue="@{viewModel.userRacial}" />
 
                 <app.igormatos.botaprarodar.common.components.CustomSelectText
                     android:id="@+id/cst_user_schooling"
@@ -178,7 +188,8 @@
                     android:label="@string/user_form_user_schooling_label"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cst_user_race" />
+                    app:layout_constraintTop_toBottomOf="@+id/cst_user_racial"
+                    app:textValue="@{viewModel.userSchooling}" />
 
                 <app.igormatos.botaprarodar.common.components.CustomEditText
                     android:id="@+id/cet_user_adress"
@@ -190,7 +201,8 @@
                     android:label="@string/user_form_user_adrees_label"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/cst_user_schooling" />
+                    app:layout_constraintTop_toBottomOf="@+id/cst_user_schooling"
+                    app:textValue="@{viewModel.userAddress}" />
 
                 <TextView
                     android:id="@+id/tv_other_pictures_label"
@@ -212,6 +224,7 @@
                     android:layout_marginTop="@dimen/margin_small"
                     android:src="@drawable/ic_baseline_add_a_photo"
                     android:text="@string/user_form_user_residence_proof_picture_label"
+                    app:imagePathOrUrl="@{viewModel.userImageDocumentResidence}"
                     app:layout_constraintEnd_toStartOf="@+id/cpp_perfil_picture"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_other_pictures_label" />
@@ -223,27 +236,29 @@
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:src="@drawable/ic_baseline_add_a_photo"
                     android:text="@string/user_form_user_perfil_picture_label"
+                    app:imagePathOrUrl="@{viewModel.userImageProfile}"
                     app:layout_constraintBottom_toBottomOf="@id/cpp_residence_proof_picture"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/cpp_residence_proof_picture"
                     app:layout_constraintTop_toTopOf="@id/cpp_residence_proof_picture" />
 
-                <androidx.appcompat.widget.AppCompatButton
+                <Button
                     android:id="@+id/btn_submit"
                     android:layout_width="0dp"
-                    android:layout_height="@dimen/button_height"
+                    android:layout_height="60dp"
                     android:layout_marginHorizontal="@dimen/margin_large"
                     android:layout_marginTop="@dimen/margin_big"
                     android:layout_marginBottom="@dimen/margin_large"
-                    android:textColor="@color/white"
-                    android:background="@color/colorPrimary"
-                    android:textStyle="bold"
-                    android:textSize="@dimen/text_size_16"
+                    android:enabled="@{viewModel.isButtonEnabled}"
+                    android:onClick="@{() -> viewModel.navigateToNextStep()}"
                     android:text="@string/user_form_button"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/text_size_16"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cpp_residence_proof_picture"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toBottomOf="@id/cpp_residence_proof_picture" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
