--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_medium"
-                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginTop="12dp"
                 android:layout_marginEnd="@dimen/margin_medium"
                 android:backgroundTint="@color/white"
                 android:paddingVertical="@dimen/padding_medium"
@@ -64,6 +64,7 @@
                 app:iconGravity="textStart"
                 app:iconTint="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/til_search_users" />
 
