--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -13,6 +13,7 @@
         <attr name="android:label"/>
         <attr name="android:hint"/>
         <attr name="android:inputType" />
+        <attr name="android:maxLength" />
     </declare-styleable>
 
     <declare-styleable name="CustomSelectText">
