--- a/app/src/main/res/layout/custom_select_text.xml
+++ b/app/src/main/res/layout/custom_select_text.xml
@@ -1,44 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
-            android:id="@+id/label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_gray"
-            android:textSize="@dimen/text_size_18"
-            tools:text="Texto qualquer" />
+        android:id="@+id/label"
+        style="@style/TextLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Texto qualquer" />
 
     <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textLayout"
-            style="@style/textInputLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_small"
-            app:hintAnimationEnabled="false"
-            app:hintEnabled="false"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/profileImageView">
+        android:id="@+id/textLayout"
+        style="@style/textInputLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_small"
+        app:hintAnimationEnabled="false"
+        app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editText"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/height_48"
-                android:textColor="@color/text_gray"
-                android:textColorHint="@color/gray_3"
-                android:textStyle="bold"
-                android:cursorVisible="false"
-                android:drawableEnd="@drawable/ic_arrow_down"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:inputType="textNoSuggestions"
-                tools:hint="Texto qualquer" />
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_48"
+            android:cursorVisible="false"
+            android:drawableEnd="@drawable/ic_arrow_down"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:inputType="textNoSuggestions"
+            android:textColor="@color/text_gray"
+            android:textColorHint="@color/gray_3"
+
+            android:textSize="@dimen/text_size_14"
+            android:textStyle="bold"
+            tools:hint="Texto qualquer" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
