--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -258,7 +258,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/schoolingStatusRadioGroup"
-                    app:textValue="@{viewModel.userAddress}"
+                    app:textValue="@={viewModel.userAddress}"
                     app:textCaptured="@{viewModel.userAddress}"/>
 
                 <TextView
@@ -308,7 +308,7 @@
                     android:layout_marginBottom="@dimen/margin_large"
                     android:enabled="@{viewModel.isButtonEnabled}"
                     android:onClick="@{() -> viewModel.navigateToNextStep()}"
-                    android:text="@string/user_form_button"
+                    app:setUserFormButtonText="@{viewModel.isEditableAvailable}"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_size_16"
                     android:textStyle="bold"
