--- a/app/src/main/res/layout/item_cell.xml
+++ b/app/src/main/res/layout/item_cell.xml
@@ -10,6 +10,17 @@
         android:background="@color/white">
 
     <ImageView
+        android:id="@+id/userBlockedIcon"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@color/purple"
+        tools:src="@drawable/ic_bike"
+        android:layout_marginEnd="16dp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
             android:id="@+id/cellImageView"
             android:layout_width="60dp"
             android:layout_height="63dp"
