--- a/app/src/main/res/layout/users_item.xml
+++ b/app/src/main/res/layout/users_item.xml
@@ -9,15 +9,15 @@
 
     <ImageView
         android:id="@+id/user_blocked_icon"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginEnd="@dimen/margin_48"
-        android:layout_marginTop="@dimen/margin_medium"
         android:visibility="gone"
-        tools:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_circle_lock" />
+        app:srcCompat="@drawable/ic_baseline_circle_lock"
+        tools:visibility="visible" />
 
     <ImageView
             android:id="@+id/iv_user_item"
