--- a/app/src/main/res/layout/users_item.xml
+++ b/app/src/main/res/layout/users_item.xml
@@ -5,16 +5,17 @@
     android:id="@+id/cellContainer"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:background="@color/background_card_user_item_gray">
+    android:background="@color/background_card_user_item_gray"
+    android:paddingHorizontal="@dimen/padding_small">
 
     <ImageView
         android:id="@+id/user_blocked_icon"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginEnd="@dimen/margin_48"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/user_menu_options"
+        app:layout_constraintStart_toEndOf="@id/tv_name_user_item"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_circle_lock"
         tools:visibility="visible" />
@@ -23,18 +24,21 @@
         android:id="@+id/user_menu_options"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
+        android:layout_marginStart="@dimen/margin_small"
         android:layout_marginEnd="@dimen/margin_medium"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/user_blocked_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_user_menu" />
 
     <ImageView
         android:id="@+id/iv_user_item"
-        android:layout_width="@dimen/circle_image_40"
-        android:layout_height="@dimen/circle_image_40"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_width="@dimen/circle_image_54"
+        android:layout_height="@dimen/circle_image_54"
+        android:layout_marginVertical="@dimen/margin_small"
+        android:layout_marginStart="@dimen/margin_small"
+        app:layout_constraintBottom_toTopOf="@id/separator_user_item"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -43,48 +47,33 @@
         android:id="@+id/tv_name_user_item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_marginStart="@dimen/margin_medium"
         android:layout_marginEnd="@dimen/margin_small"
-        android:fontFamily="@font/roboto_medium"
+        android:fontFamily="@font/roboto"
         android:maxLength="20"
+        android:paddingTop="@dimen/padding_small"
         android:textColor="@color/gray_6"
         android:textSize="@dimen/text_size_medium"
-        app:layout_constraintBottom_toTopOf="@id/tv_active_withdraw"
         app:layout_constraintEnd_toStartOf="@id/user_blocked_icon"
         app:layout_constraintStart_toEndOf="@id/iv_user_item"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/iv_user_item"
         tools:text="Nome Usuário" />
-
-    <TextView
-        android:id="@+id/tv_registered_since_user_item"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_medium"
-        android:layout_marginTop="@dimen/margin_small"
-        android:layout_marginEnd="@dimen/margin_small"
-        android:textColor="@color/text_gray"
-        android:visibility="gone"
-        app:layout_constraintEnd_toStartOf="@+id/tv_active_withdraw"
-        app:layout_constraintStart_toStartOf="@+id/tv_name_user_item"
-        app:layout_constraintTop_toBottomOf="@id/tv_name_user_item"
-        tools:text="Cadastrado desde 15/02/2021" />
 
     <TextView
         android:id="@+id/tv_active_withdraw"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto_medium"
-        android:paddingVertical="@dimen/padding_minimun"
+        android:fontFamily="@font/roboto"
         android:text="@string/active_withdraw"
         android:textColor="@color/information_blue_color"
         android:textSize="@dimen/text_size_12"
         android:textStyle="bold"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/separator_user_item"
+        app:layout_constraintBottom_toBottomOf="@id/iv_user_item"
         app:layout_constraintEnd_toEndOf="@id/tv_name_user_item"
         app:layout_constraintStart_toStartOf="@id/tv_name_user_item"
         app:layout_constraintTop_toBottomOf="@id/tv_name_user_item"
+        app:layout_constraintVertical_bias="0.5"
         tools:visibility="visible" />
 
     <TextView
@@ -92,41 +81,25 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/roboto_medium"
-        android:padding="@dimen/padding_minimun"
         android:text="@string/user_phone_number"
         android:textColor="@color/gray_3"
         android:textSize="@dimen/text_size_12"
         android:textStyle="bold"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/separator_user_item"
+        app:layout_constraintBottom_toBottomOf="@id/iv_user_item"
         app:layout_constraintEnd_toEndOf="@id/tv_name_user_item"
         app:layout_constraintStart_toStartOf="@id/tv_name_user_item"
         app:layout_constraintTop_toBottomOf="@id/tv_name_user_item"
-        tools:visibility="gone" />
-
-    <TextView
-        android:id="@+id/tv_last_withdraw_user_item"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginTop="@dimen/margin_small"
-        android:layout_marginEnd="@dimen/margin_medium"
-        android:textColor="@color/text_gray"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_user_item"
-        app:layout_constraintTop_toBottomOf="@id/tv_registered_since_user_item"
-        tools:text="Último empréstimo: 10/02/2021" />
+        app:layout_constraintVertical_bias="0.5"
+        tools:visibility="visible" />
 
     <View
         android:id="@+id/separator_user_item"
         android:layout_width="0dp"
         android:layout_height="@dimen/separator_height"
-        android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginTop="@dimen/margin_medium"
         android:background="@color/separator_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_active_withdraw" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_user_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
