--- a/app/src/main/res/layout/bicycle_cell.xml
+++ b/app/src/main/res/layout/bicycle_cell.xml
@@ -8,6 +8,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="@dimen/margin_12"
         android:background="@color/white"
+        app:cardCornerRadius="8dp"
         app:cardUseCompatPadding="true">
 
     <LinearLayout
@@ -19,7 +20,7 @@
                 android:id="@+id/iv_bike_item"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.25"
+                android:layout_weight="0.3"
                 android:adjustViewBounds="false"
                 android:contentDescription="@string/bicycle_image_view_descripition"
                 android:cropToPadding="false"
@@ -32,77 +33,56 @@
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="0.75">
+                android:layout_weight="0.7"
+            android:paddingVertical="@dimen/margin_medium">
 
             <TextView
-                    android:id="@+id/tv_name_bike_item"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_12"
-                    android:layout_marginTop="@dimen/margin_small"
-                    android:layout_marginEnd="@dimen/margin_small"
-                    android:maxLines="1"
-                    android:textColor="@color/text_gray"
-                    app:layout_constraintEnd_toStartOf="@+id/iv_arrow_bike_item"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="Nome da bike asfdjsdfsklfjklsdjflkdsjf" />
+                android:id="@+id/tv_order_bike_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray_6"
+                android:textAllCaps="true"
+                android:textSize="12sp"
+                android:fontFamily="@font/roboto_medium"
+                app:layout_constraintBottom_toTopOf="@+id/tv_name_bike_item"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="@+id/tv_name_bike_item"
+                app:layout_constraintRight_toRightOf="@+id/tv_name_bike_item"
+                app:layout_constraintStart_toStartOf="@+id/tv_name_bike_item"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="Ordem: 123" />
 
             <TextView
-                    android:id="@+id/tv_order_bike_item"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_small"
-                    android:textColor="@color/text_gray"
-                    app:layout_constraintEnd_toStartOf="@+id/iv_arrow_bike_item"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintLeft_toLeftOf="@+id/tv_name_bike_item"
-                    app:layout_constraintRight_toRightOf="@+id/tv_name_bike_item"
-                    app:layout_constraintStart_toStartOf="@+id/tv_name_bike_item"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_name_bike_item"
-                    tools:text="Ordem: 123" />
+                android:id="@+id/tv_name_bike_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_12"
+                android:fontFamily="@font/roboto_medium"
+                android:maxLines="1"
+                android:paddingVertical="@dimen/margin_small"
+                android:textColor="@color/gray_6"
+                android:textSize="@dimen/text_size_24"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:ellipsize="end"
+                tools:text="Caloi XR245" />
 
             <TextView
-                    android:id="@+id/tv_series_bike_item"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_small"
-                    android:textColor="@color/text_gray"
-                    app:layout_constraintEnd_toStartOf="@+id/iv_arrow_bike_item"
-                    app:layout_constraintStart_toStartOf="@+id/tv_name_bike_item"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_order_bike_item"
-                    tools:text="Serie: ABCDX123" />
-
-            <TextView
-                    android:id="@+id/tv_withdraw_user_name"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:background="@color/bg_green"
-                    android:padding="4dp"
-                    android:singleLine="true"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:visibility="invisible"
-                    tools:visibility="visible"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_series_bike_item"
-                    app:layout_constraintVertical_bias="1.0"
-                    tools:text="José Santos Silveira de Lima Moraes" />
-
-            <ImageView
-                    android:id="@+id/iv_arrow_bike_item"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_medium"
-                    android:src="@drawable/ic_arrow"
-                    app:layout_constraintBottom_toTopOf="@+id/tv_withdraw_user_name"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/text_gray" />
-
+                android:id="@+id/tv_series_bike_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray_6"
+                android:textAllCaps="true"
+                android:textSize="12sp"
+                android:fontFamily="@font/roboto_medium"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/tv_name_bike_item"
+                app:layout_constraintStart_toStartOf="@+id/tv_name_bike_item"
+                app:layout_constraintTop_toBottomOf="@+id/tv_name_bike_item"
+                tools:text="Série: ABCDX123" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </LinearLayout>
