--- a/app/src/main/res/layout/fragment_select_user.xml
+++ b/app/src/main/res/layout/fragment_select_user.xml
@@ -1,27 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
-                name="viewModel"
-                type="app.igormatos.botaprarodar.presentation.bikewithdraw.viewmodel.SelectUserViewModel" />
+            name="viewModel"
+            type="app.igormatos.botaprarodar.presentation.bikewithdraw.viewmodel.SelectUserViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background_card_user_item_gray">
+
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tie_user_search"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_medium"
+            android:visibility="gone"
+            app:circularflow_defaultRadius="8dp"
+            app:layout_constraintBottom_toTopOf="@id/userList"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_weight="0.1"
+            app:startIconDrawable="@drawable/ic_search">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:background="@color/background_input_search"
+                android:fontFamily="@font/roboto"
+                android:hint="@string/search_cyclist_name" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/userList"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:listitem="@layout/users_item" />
+            android:id="@+id/userList"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tie_user_search"
+            app:layout_constraintVertical_weight="1"
+            tools:listitem="@layout/users_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
