--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -36,4 +36,5 @@
     <color name="yellow">#F2C94C</color>
     <color name="background_card_user_item_gray">#F5F5F5</color>
     <color name="information_blue_color">#0063E7</color>
+    <color name="background_input_search">#F0F0F0</color>
 </resources>
