--- a/app/src/main/res/layout/bike_confirmation_user_info_container.xml
+++ b/app/src/main/res/layout/bike_confirmation_user_info_container.xml
@@ -62,6 +62,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_medium"
                 android:layout_marginBottom="@dimen/margin_minimum"
+                android:textStyle="bold"
+                android:fontFamily="@font/roboto"
                 android:text="@{@string/bike_withdraw_date(viewModel.withdrawDate)}"
                 android:textColor="@color/text_gray"
                 android:textSize="12sp"
