Layout: Creating and using shape with rounded top corners

--- a/app/src/main/res/layout/fragment_bike_confirmation.xml
+++ b/app/src/main/res/layout/fragment_bike_confirmation.xml
@@ -22,7 +22,7 @@
             android:layout_marginStart="@dimen/margin_medium"
             android:layout_marginTop="@dimen/margin_medium"
             android:layout_marginEnd="@dimen/margin_medium"
-            android:background="@drawable/rounded_corner"
+            android:background="@drawable/top_rounded_corner"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
