Feature: Update layout userQuiz and field standardization

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -16,11 +16,18 @@
         <attr name="android:maxLength" />
     </declare-styleable>
 
+    <declare-styleable name="CustomEditTextWithButton">
+        <attr name="android:label"/>
+        <attr name="android:hint"/>
+        <attr name="android:inputType" />
+        <attr name="isNeedQuestion" format="reference|boolean"/>
+        <attr name="questionLabel" format="reference|string"/>
+    </declare-styleable>
+
     <declare-styleable name="CustomSelectText">
         <attr name="android:label"/>
         <attr name="android:hint"/>
     </declare-styleable>
-
 
     <declare-styleable name="CustomPicturePick">
         <attr name="android:src"/>
