--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -19,10 +19,10 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintVertical_bias="1.0">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -30,17 +30,17 @@
                 tools:context=".presentation.user.userform.UserFormFragment">
 
                 <TextView
-                        android:id="@+id/schoolingStatusRadioGroupLabel"
-                        style="@style/TextLabel"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_marginStart="@dimen/margin_medium"
-                        android:layout_marginTop="@dimen/margin_medium"
-                        android:layout_marginBottom="@dimen/margin_14"
-                        android:text="@string/add_user_schooling_status"
-                        app:layout_constraintBottom_toTopOf="@+id/schoolingStatusRadioGroup"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/cst_user_schooling" />
+                    android:id="@+id/schoolingStatusRadioGroupLabel"
+                    style="@style/TextLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginStart="@dimen/margin_medium"
+                    android:layout_marginTop="@dimen/margin_medium"
+                    android:layout_marginBottom="@dimen/margin_14"
+                    android:text="@string/add_user_schooling_status"
+                    app:layout_constraintBottom_toTopOf="@+id/schoolingStatusRadioGroup"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cst_user_schooling" />
 
                 <RadioGroup
                     android:id="@+id/schoolingStatusRadioGroup"
@@ -191,8 +191,8 @@
                     app:layout_constraintEnd_toStartOf="@+id/cst_user_income"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/cpp_document_back_picture"
-                    app:textValue="@={viewModel.userAge}"
-                    app:textCaptured="@{viewModel.userAge}"/>
+                    app:textCaptured="@{viewModel.userAge}"
+                    app:textValue="@={viewModel.userAge}" />
 
                 <app.igormatos.botaprarodar.common.components.CustomSelectText
                     android:id="@+id/cst_user_income"
@@ -258,8 +258,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/schoolingStatusRadioGroup"
-                    app:textValue="@={viewModel.userAddress}"
-                    app:textCaptured="@{viewModel.userAddress}"/>
+                    app:textCaptured="@{viewModel.userAddress}"
+                    app:textValue="@={viewModel.userAddress}" />
 
                 <TextView
                     android:id="@+id/tv_other_pictures_label"
@@ -308,14 +308,14 @@
                     android:layout_marginBottom="@dimen/margin_large"
                     android:enabled="@{viewModel.isButtonEnabled}"
                     android:onClick="@{() -> viewModel.navigateToNextStep()}"
-                    app:setUserFormButtonText="@{viewModel.isEditableAvailable}"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_size_16"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cpp_residence_proof_picture" />
+                    app:layout_constraintTop_toBottomOf="@id/cpp_residence_proof_picture"
+                    app:setUserFormButtonText="@{viewModel.isEditableAvailable}" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
