--- a/app/src/main/res/layout/fragment_step_final_return_bike.xml
+++ b/app/src/main/res/layout/fragment_step_final_return_bike.xml
@@ -1,50 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <import
-                alias="ExtensionFunctions"
-                type="app.igormatos.botaprarodar.common.extensions.BikeExtensionKt" />
+            alias="ExtensionFunctions"
+            type="app.igormatos.botaprarodar.common.extensions.BikeExtensionKt" />
 
         <import
-                alias="StringExtension"
-                type="com.brunotmgomes.ui.extensions.CharSequenceExtensionKt" />
+            alias="StringExtension"
+            type="com.brunotmgomes.ui.extensions.CharSequenceExtensionKt" />
 
         <variable
-                name="viewModel"
-                type="app.igormatos.botaprarodar.presentation.returnbicycle.stepFinalReturnBike.StepFinalReturnBikeViewModel" />
+            name="viewModel"
+            type="app.igormatos.botaprarodar.presentation.returnbicycle.stepFinalReturnBike.StepFinalReturnBikeViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_container_step_final_return_bike"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_medium"
-                android:layout_marginTop="@dimen/margin_medium"
-                android:layout_marginEnd="@dimen/margin_medium"
-                android:background="@drawable/rounded_corner"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+            android:id="@+id/cl_container_step_final_return_bike"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:background="@drawable/rounded_corner"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
-                    android:id="@+id/iv_step_final_return_bike"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"
-                    android:scaleType="centerCrop"
-                    app:imagePathOrUrl="@{viewModel.bikeHolder.photoPath}"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars" />
+                android:id="@+id/iv_step_final_return_bike"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                android:contentDescription="@{@string/bicycle_image(viewModel.bikeHolder.name)}"
+                android:scaleType="centerCrop"
+                app:imagePathOrUrl="@{viewModel.bikeHolder.photoPath}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
                 android:id="@+id/tv_bike_name_step_final_return_bike"
@@ -62,17 +63,18 @@
 
             <TextView
                 android:id="@+id/tv_bike_order_step_final_return_bike"
+                style="@style/SubtitleExpandedCardConfirmation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{@string/bike_order_number(viewModel.bikeHolder.orderNumber.toString())}"
                 android:layout_marginTop="@dimen/margin_small"
-                style="@style/SubtitleExpandedCardConfirmation"
+                android:text="@{@string/bike_order_number(viewModel.bikeHolder.orderNumber.toString())}"
                 app:layout_constraintStart_toStartOf="@+id/tv_bike_name_step_final_return_bike"
                 app:layout_constraintTop_toBottomOf="@+id/tv_bike_name_step_final_return_bike"
                 tools:text="Ordem: 12345" />
 
             <TextView
                 android:id="@+id/tv_bike_series_step_final_return_bike"
+                style="@style/SubtitleExpandedCardConfirmation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_medium"
@@ -80,95 +82,94 @@
                 android:text="@{@string/bike_series_number(viewModel.bikeHolder.serialNumber)}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                style="@style/SubtitleExpandedCardConfirmation"
                 app:layout_constraintStart_toEndOf="@+id/tv_bike_order_step_final_return_bike"
                 app:layout_constraintTop_toTopOf="@+id/tv_bike_order_step_final_return_bike"
                 tools:text="Série: 09876" />
 
             <View
-                    android:id="@+id/divider_step_final_return_bike"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/separator_height"
-                    android:layout_marginTop="@dimen/margin_12"
-                    android:background="@color/background_gray"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_bike_order_step_final_return_bike" />
+                android:id="@+id/divider_step_final_return_bike"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/separator_height"
+                android:layout_marginTop="@dimen/margin_12"
+                android:background="@color/background_gray"
+                app:layout_constraintTop_toBottomOf="@+id/tv_bike_order_step_final_return_bike" />
 
             <ImageView
-                    android:id="@+id/iv_user_step_final_return_bike"
-                    android:layout_width="@dimen/circle_image_40"
-                    android:layout_height="@dimen/circle_image_40"
-                    android:layout_marginStart="@dimen/margin_medium"
-                    app:imagePathOrUrlCircle="@{ExtensionFunctions.getLastWithdraw(viewModel.bikeHolder).user.profilePictureThumbnail}"
-                    app:layout_constraintBottom_toBottomOf="@+id/tv_return_date_step_final_return_bike"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/tv_user_name_step_final_return_bike"
-                    tools:srcCompat="@tools:sample/avatars" />
+                android:id="@+id/iv_user_step_final_return_bike"
+                android:layout_width="@dimen/circle_image_40"
+                android:layout_height="@dimen/circle_image_40"
+                android:layout_marginStart="@dimen/margin_medium"
+                app:imagePathOrUrlCircle="@{ExtensionFunctions.getLastWithdraw(viewModel.bikeHolder).user.profilePictureThumbnail}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_return_date_step_final_return_bike"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_user_name_step_final_return_bike"
+                tools:srcCompat="@tools:sample/avatars" />
 
             <TextView
-                    android:id="@+id/tv_user_name_step_final_return_bike"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_medium"
-                    android:layout_marginTop="@dimen/margin_medium"
-                    android:layout_marginEnd="@dimen/margin_medium"
-                    android:maxLength="20"
-                    android:text="@{ExtensionFunctions.getLastWithdraw(viewModel.bikeHolder).user.name}"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/text_size_medium"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/iv_user_step_final_return_bike"
-                    app:layout_constraintTop_toBottomOf="@+id/divider_step_final_return_bike"
-                    tools:text="Bruce Wayne" />
+                android:id="@+id/tv_user_name_step_final_return_bike"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:maxLength="20"
+                android:text="@{ExtensionFunctions.getLastWithdraw(viewModel.bikeHolder).user.name}"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size_medium"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/iv_user_step_final_return_bike"
+                app:layout_constraintTop_toBottomOf="@+id/divider_step_final_return_bike"
+                tools:text="Bruce Wayne" />
 
             <TextView
-                    android:id="@+id/tv_withdraw_date_step_final_return_bike"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_medium"
-                    android:layout_marginEnd="@dimen/margin_medium"
-                    android:text="@{@string/bike_withdraw_date(viewModel.withdrawDate)}"
-                    android:textColor="@color/text_gray"
-                    android:textSize="12sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/iv_user_step_final_return_bike"
-                    app:layout_constraintTop_toBottomOf="@id/tv_user_name_step_final_return_bike"
-                    tools:text="Data de empréstimo: 15/02/2021" />
+                android:id="@+id/tv_withdraw_date_step_final_return_bike"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:text="@{@string/bike_withdraw_date(viewModel.withdrawDate)}"
+                android:textColor="@color/text_gray"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/iv_user_step_final_return_bike"
+                app:layout_constraintTop_toBottomOf="@id/tv_user_name_step_final_return_bike"
+                tools:text="Data de empréstimo: 15/02/2021" />
 
             <TextView
-                    android:id="@+id/tv_return_date_step_final_return_bike"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_medium"
-                    android:layout_marginEnd="@dimen/margin_medium"
-                    android:layout_marginBottom="@dimen/margin_medium"
-                    android:text="@{@string/bike_devolution_date(viewModel.devolution)}"
-                    android:textColor="@color/text_gray"
-                    android:textSize="12sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/iv_user_step_final_return_bike"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_date_step_final_return_bike"
-                    tools:text="Data de devolução: 19/02/2021" />
+                android:id="@+id/tv_return_date_step_final_return_bike"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_medium"
+                android:layout_marginEnd="@dimen/margin_medium"
+                android:layout_marginBottom="@dimen/margin_medium"
+                android:text="@{@string/bike_devolution_date(viewModel.devolution)}"
+                android:textColor="@color/text_gray"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/iv_user_step_final_return_bike"
+                app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_date_step_final_return_bike"
+                tools:text="Data de devolução: 19/02/2021" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
-                android:id="@+id/btn_confirm_step_final_return_bike"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/margin_medium"
-                android:layout_marginTop="@dimen/margin_large"
-                android:layout_marginEnd="@dimen/margin_medium"
-                android:layout_marginBottom="@dimen/margin_medium"
-                android:onClick="@{() -> viewModel.finalizeDevolution()}"
-                android:padding="@dimen/padding_medium"
-                android:text="@string/confirmar_devolucao"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cl_container_step_final_return_bike"
-                app:layout_constraintVertical_bias="0.0" />
+            android:id="@+id/btn_confirm_step_final_return_bike"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_medium"
+            android:layout_marginTop="@dimen/margin_large"
+            android:layout_marginEnd="@dimen/margin_medium"
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:onClick="@{() -> viewModel.finalizeDevolution()}"
+            android:padding="@dimen/padding_medium"
+            android:text="@string/confirmar_devolucao"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cl_container_step_final_return_bike"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
