Feature: Reusing the finish action componente when returning a bike
Co-authored-by: joedav <joelyson.david@live.com>

--- a/app/src/main/res/navigation/withdraw_bike_nav_graph.xml
+++ b/app/src/main/res/navigation/withdraw_bike_nav_graph.xml
@@ -20,6 +20,6 @@
             tools:layout="@layout/fragment_bike_confirmation" />
     <activity
         android:id="@+id/finishWithdraw"
-        android:name="app.igormatos.botaprarodar.presentation.components.FinishWithdraw"
+        android:name="app.igormatos.botaprarodar.presentation.bikewithdraw.FinishWithdrawActivity"
         android:label="FinishWithdraw" />
 </navigation>
