--- a/app/src/main/res/navigation/return_bike_nav_graph.xml
+++ b/app/src/main/res/navigation/return_bike_nav_graph.xml
@@ -10,33 +10,22 @@
             android:id="@+id/returnBikeFragment"
             android:name="app.igormatos.botaprarodar.presentation.returnbicycle.stepOneReturnBike.StepOneReturnBikeFragment"
             android:label="@string/return_bike_toolbar_title"
-            tools:layout="@layout/fragment_step_one_return_bike">
-        <action
-                android:id="@+id/action_returnBikeFragment_to_returnBikeQuizFragment"
-                app:destination="@id/returnBikeQuizFragment"
-                app:enterAnim="@anim/slide_in_right"
-                app:exitAnim="@anim/slide_out_left"
-                app:popEnterAnim="@anim/slide_in_left"
-                app:popExitAnim="@anim/slide_out_right" />
-    </fragment>
+            tools:layout="@layout/fragment_step_one_return_bike"/>
 
     <fragment
             android:id="@+id/returnBikeQuizFragment"
             android:name="app.igormatos.botaprarodar.presentation.returnbicycle.stepQuizReturnBike.ReturnBikeQuizFragment"
             android:label="@string/return_bike_toolbar_title"
-            tools:layout="@layout/fragment_return_bike_quiz">
-        <action
-                android:id="@+id/action_returnBikeQuizFragment_to_stepFinalReturnBikeFragment"
-                app:destination="@id/stepFinalReturnBikeFragment"
-                app:enterAnim="@anim/slide_in_right"
-                app:exitAnim="@anim/slide_out_left"
-                app:popEnterAnim="@anim/slide_in_left"
-                app:popExitAnim="@anim/slide_out_right" />
-    </fragment>
+            tools:layout="@layout/fragment_return_bike_quiz" />
 
     <fragment
             android:id="@+id/stepFinalReturnBikeFragment"
             android:name="app.igormatos.botaprarodar.presentation.returnbicycle.stepFinalReturnBike.StepFinalReturnBikeFragment"
             android:label="@string/return_bike_toolbar_title"
             tools:layout="@layout/fragment_step_final_return_bike" />
+
+    <activity
+        android:id="@+id/finishReturnBikeActivity"
+        android:name="app.igormatos.botaprarodar.presentation.returnbicycle.FinishReturnBikeActivity"
+        android:label="FinishReturnBikeActivity" />
 </navigation>
