Layout: Handle Click and Update List when Search Cyclist

--- a/app/src/main/res/layout/fragment_select_user.xml
+++ b/app/src/main/res/layout/fragment_select_user.xml
@@ -33,7 +33,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="60dp"
                 android:background="@color/background_input_search"
                 android:fontFamily="@font/roboto"
                 android:hint="@string/search_cyclist_name"
@@ -43,26 +43,14 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/userList"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="0dp"-->
-<!--            android:visibility="gone"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/tie_user_search"-->
-<!--            app:layout_constraintVertical_weight="1"-->
-<!--            tools:listitem="@layout/users_item" />-->
-
         <androidx.compose.ui.platform.ComposeView
             android:id="@+id/userList"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            app:layout_constraintVertical_weight="1"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tie_user_search" />
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tie_user_search"
+            app:layout_constraintVertical_weight="1" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
